[tool.poetry]
name = "docs-and-blog-entries-manager"
version = "0.1.0"
description = ""
authors = ["Symthy <sympathia3104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pyyaml = "^6.0.1"
et = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
